# transformation

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: ci.yml  ci_dev.yml  hosted-pure-workflow.yml
example/: CMakeLists.txt  main.cpp
include/: aml.h  aml_dcm.h  aml_euler.h  aml_matrix_33.h  aml_rotation.h  aml_vector_3.h
src/: CMakeLists.txt  aml.cpp  aml_dcm.cpp  aml_euler.cpp  aml_matrix_33.cpp  aml_rotation.cpp  aml_vector_3.cpp
test/: CMakeLists.txt  aml_matrix_33.cpp  aml_test.cpp  aml_vector_3_test.cpp
